Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111718

QAxScript: Changed value of ByRef parameter is not returned

    XMLWordPrintable

Details

    • Windows
    • e640503b6 (dev), 41c9f8eb9 (6.5)

    Description

      When calling VB script function through QAxScript. This function has ByRef parameters which returns the information.

      In Qt4 the call “QAxScript::call(const QString&, QList<QVariant>&)” returned the information of the ByRef parameter correctly. In Qt 5.15 the same call does not return the information from the VBScript function. The parameters are unchanged.

      In the attached reproducer the call “QAxScript::call(const QString&, QList<QVariant>)” is replaced by “QAxSrciptEngine::dynamicCall(const char*, QList<QVariant>&)” because the internal parameters changed a bit from Qt4 to Qt5.15.12. But the problem remains the same.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            foxxx Tuukka Kettunen
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes